[project]
name = "all-slain"

dynamic = ["version"]
description = "Star Citizen Game Log Event Viewer"

readme = "README.md"
requires-python = ">=3.10"

license = "MIT"
license-files = ["LICENSE"]

[project.urls]
homepage = "https://github.com/DimmaDont/all-slain"
source = "https://github.com/DimmaDont/all-slain"
issues = "https://github.com/DimmaDont/all-slain/issues"


[tool]

[tool.black]
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.isort]
lines_after_imports = 2
profile = "black"

[tool.mypy]
check_untyped_defs = true
files = ["."]
strict_equality = true

[tool.pylint]
ignore-paths = "venv"

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "import-outside-toplevel",
    "line-too-long",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-few-public-methods",
]

[tool.setuptools_scm]
