[project]
name = "allslain"

dynamic = ["version"]
description = "Star Citizen Game Log Event Viewer"

readme = "README.md"
requires-python = ">=3.10"

license = "MIT"
license-files = ["LICENSE"]

dependencies = []

[project.optional-dependencies]
launcher_store = [
    "crypt_sindresorhus_conf[cryptography] @ git+https://github.com/DimmaDont/py-crypt-sindresorhus-conf@f54d26b244106fbe3a1171660ad3bff789f67a3f",
]
app = [
    "allslain[launcher_store]",
    "beautifulsoup4",
    "packaging",
    "requests",
    "semver",
    "tomlkit",
    'typing_extensions; python_version < "3.11"',
]
build_app = [
    "allslain[app]",
    "pyinstaller @ https://github.com/DimmaDont/Pyinstaller-Builds/raw/2374db9979ecccef9ceda8a856f178c0d1a192ff/x86_64/pyinstaller-6.14.1-py3-none-any.whl",
    "setuptools-scm",
]
extra = [
    "allslain[app]",
    "lxml",
]
all = ["allslain[build_app,extra]"]

[project.urls]
homepage = "https://github.com/DimmaDont/all-slain"
source = "https://github.com/DimmaDont/all-slain"
issues = "https://github.com/DimmaDont/all-slain/issues"


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[tool]

[tool.black]
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.isort]
lines_after_imports = 2
profile = "black"

[tool.mypy]
check_untyped_defs = true
files = ["."]
strict_equality = true

[tool.pylint]
ignore-paths = "venv"

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "import-outside-toplevel",
    "line-too-long",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-few-public-methods",
]

[tool.setuptools]
package-dir = {"allslain" = "src"}

[tool.setuptools_scm]
